[package]
name = "extended-primitives"
version = "0.1.0"
authors = ["kilpatty <seanpkilgarriff@gmail.com>"]
edition = "2018"

[features]
serialization = ["serde"]
rng = ["rand"]

[dependencies]
hex = "0.3.2"

#Optional
serde = { version="1", optional=true}
rand = { version="0.7.2", optional=true}

[dev-dependencies]
serde_test = "1"
