[package]
name = "extended-primitives"
version = "0.3.3"
authors = ["kilpatty <seanpkilgarriff@gmail.com>"]
edition = "2018"
description = "A library providing primitive-like types for use"
license = "MIT"

[features]
serialization = ["serde"]
rng = ["rand"]

[dependencies]

#Known External
encodings = "0.1.0"

#Optional
serde = { version="1", optional=true}
rand = { version="0.7.2", optional=true}

[dev-dependencies]
serde_test = "1"
